===== Stable Versions ========
[B]v1.0.3 (23/8/2014)[/B]
-Updated acestreamengine for windows + android

B]v1.0.2 (22/8/2014)[/B]
-Updated acestreamengine for linux i386/x64_86
-Simplified configuration for linux i386/x64_86
-Updated engines for openelec i386/x64_86
-Updated sopclient for android
-Improvements in the parser engine (requested by al101)
-Fixed xbmc favourites if parser folder is empty
-Wiki updated

[B]v1.0.1 (17/8/2014)[/B]
-Fixed handshake for acestreamengine api versions > 2.x
-Added new android acestreamengine (addon configuration)

[B]v1.0.0 (11/8/2014)[/B]
-First stable release


===== Devlopment versions =======

[B]v0.1.0 (13-01-2014) - v0.5.0 (11/8/2014)[/B]
-Development and previous alpha,beta releases of the addon
